// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list: insert a media single inside a bullet list 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "*",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            Object {
              "attrs": Object {
                "layout": "center",
                "width": null,
              },
              "content": Array [
                Object {
                  "attrs": Object {
                    "__contextId": "DUMMY-OBJECT-ID",
                    "__displayType": null,
                    "__external": false,
                    "__fileMimeType": "image/jpeg",
                    "__fileName": "example.png",
                    "__fileSize": 756325,
                    "alt": "",
                    "collection": "MediaServicesSample",
                    "height": 636,
                    "id": "1234-5678-abcd-efgh",
                    "occurrenceKey": null,
                    "type": "file",
                    "url": null,
                    "width": 640,
                  },
                  "type": "media",
                },
              ],
              "type": "mediaSingle",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`list: insert a media single inside a numbered list 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "*",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            Object {
              "attrs": Object {
                "layout": "center",
                "width": null,
              },
              "content": Array [
                Object {
                  "attrs": Object {
                    "__contextId": "DUMMY-OBJECT-ID",
                    "__displayType": null,
                    "__external": false,
                    "__fileMimeType": "image/jpeg",
                    "__fileName": "example.png",
                    "__fileSize": 756325,
                    "alt": "",
                    "collection": "MediaServicesSample",
                    "height": 636,
                    "id": "1234-5678-abcd-efgh",
                    "occurrenceKey": null,
                    "type": "file",
                    "url": null,
                    "width": 640,
                  },
                  "type": "media",
                },
              ],
              "type": "mediaSingle",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;
